# tomato-disease-classifier

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: convolutions.ipynb  data_exp.ipynb  exp_two.ipynb  models.ipynb  test-notebook.ipynb
src/: dataset.py  evaluate.py  model.py  train.py
src/configs/: paths.py
tests/: test_dataset.py  test_models.py
